[gd_scene load_steps=13 format=3 uid="uid://crf0rainai2gr"]

[ext_resource type="Script" uid="uid://dhqie3tqm620w" path="res://scripts/turret.gd" id="1_el7wl"]
[ext_resource type="Script" uid="uid://df5xd37qbslfc" path="res://scripts/turret_part.gd" id="2_el7wl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_el7wl"]
top_radius = 0.1
bottom_radius = 0.1
height = 0.91

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x3mc5"]
metallic = 0.97
roughness = 0.69

[sub_resource type="BoxMesh" id="BoxMesh_el7wl"]
material = SubResource("StandardMaterial3D_x3mc5")
size = Vector3(0.205, 0.34, 0.765)

[sub_resource type="CylinderMesh" id="CylinderMesh_485p4"]
material = SubResource("StandardMaterial3D_x3mc5")
top_radius = 0.06
bottom_radius = 0.06
height = 1.145

[sub_resource type="BoxMesh" id="BoxMesh_485p4"]
material = SubResource("StandardMaterial3D_x3mc5")
size = Vector3(0.205, 0.29, 0.625)

[sub_resource type="BoxShape3D" id="BoxShape3D_pp6j5"]
size = Vector3(0.205, 0.29, 0.625)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_el7wl"]
albedo_color = Color(0.558287, 0.558287, 0.558287, 1)
metallic = 0.97
roughness = 0.69

[sub_resource type="CylinderMesh" id="CylinderMesh_pp6j5"]
material = SubResource("StandardMaterial3D_el7wl")
top_radius = 0.04
bottom_radius = 0.04
height = 0.145

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6fjxm"]
height = 0.15
radius = 0.0429688

[sub_resource type="BoxShape3D" id="BoxShape3D_x3mc5"]
size = Vector3(0.205, 0.34, 1.65057)

[node name="Turret" type="StaticBody3D"]
collision_layer = 2
script = ExtResource("1_el7wl")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.493952, 0)
mesh = SubResource("CylinderMesh_el7wl")

[node name="LaserBeam" type="MeshInstance3D" parent="."]

[node name="Body" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_el7wl")

[node name="Barrel" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.680188)
mesh = SubResource("CylinderMesh_485p4")

[node name="AmmoBox" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.180665, -0.0729207, 0)
script = ExtResource("2_el7wl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="AmmoBox"]
mesh = SubResource("BoxMesh_485p4")
skeleton = NodePath("../../root/@EditorNode@21272/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Turret")

[node name="CollisionShape3D" type="CollisionShape3D" parent="AmmoBox"]
shape = SubResource("BoxShape3D_pp6j5")

[node name="Laser" type="StaticBody3D" parent="."]
script = ExtResource("2_el7wl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0872798, -1.05041)
mesh = SubResource("CylinderMesh_pp6j5")
skeleton = NodePath("../../root/@EditorNode@21272/@Panel@14/@VBoxContainer@15/DockHSplitLeftL/DockHSplitLeftR/DockHSplitMain/@VBoxContainer@26/DockVSplitCenter/@VSplitContainer@54/@VBoxContainer@55/@EditorMainScreen@102/MainScreen/@CanvasItemEditor@11482/@VSplitContainer@11134/@HSplitContainer@11136/@HSplitContainer@11138/@Control@11139/@SubViewportContainer@11140/@SubViewport@11141/Turret")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0872798, -1.05041)
shape = SubResource("CylinderShape3D_6fjxm")

[node name="LaserRay" type="RayCast3D" parent="Laser"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0872798, -1.12228)
target_position = Vector3(0, 0, -100)
collide_with_areas = true

[node name="casingPos" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.118959, 0.130286, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.442783)
shape = SubResource("BoxShape3D_x3mc5")

[node name="MuzzleRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.25038)
target_position = Vector3(0, 0, -100)
collide_with_areas = true
